# rust_agency

./: .gitignore  .gitmodules  CLA.md  Cargo.toml  Dockerfile.speaker  LICENSE  Makefile  README.md  agency_history.jsonl  agency_isometric.json  agency_models.json  agency_profile.json  analyze_onnx.py  build.rs  check_onnx.py  check_onnx_all.py  check_v_params.py  commit_messages.txt  debug_python_tokens.py  docker-compose.yml  export_full_port.py  export_onnx.py  export_s3gen_parts.py  export_t3_extras.py  export_torchscript.py  fix_export.py  governance-constitution-design.md  inspect_gather.py  inspect_nodes.py  inspect_s3gen.py  mcp_servers.json  memory.json  nohup.out  otel-config.yaml  readme-governance-section.md  session.json  speak.py  speaker_pipe.py  speaker_server.py  split_onnx.py  (+3 more)
.github/: CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
artifacts/chatterbox/: .gitattributes  config.json  generation_config.json  preprocessor_config.json  tokenizer_config.json
pai-core/src/: lib.rs  sap.rs  uap.rs  vcp.rs
proto/: uap.proto
scripts/: agent_ci.sh  bundle_onnx.sh  otel-collector.sb  setup_podman.sh  start_otel_safe.sh
skills/CORE/USER/TELOS/: BELIEFS.md  GOALS.md
src/: desktop.rs  lib.rs  main.rs  server.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/agent/: README.md  autonomous.rs  background.rs  cache.rs  ctm.rs  mod.rs  nqd.rs  provider.rs  react.rs  reflection.rs  rl.rs  speaker_rs.rs  training.rs  types.rs
src/fpf/: README.md  agency.rs  agent_tools.rs  aggregation.rs  assurance.rs  bridge.rs  capability.rs  cg_bundle.rs  cg_cal.rs  cg_chr.rs  cg_generator.rs  cg_spec.rs  cn_spec.rs  commitment.rs  compose_cal.rs  context.rs  creativity_chr.rs  dhc_dashboard.rs  discipline_cal.rs  discipline_chr.rs  dispatcher.rs  drr.rs  ee_log.rs  ethics.rs  evidence.rs  evidence_graph.rs  evolution.rs  gate.rs  harness.rs  holon.rs  kd_cal.rs  kernel.rs  kind_cal.rs  mereology.rs  mm_chr.rs  mod.rs  mvpk.rs  nqd_cal.rs  parity.rs  plan.rs  (+17 more)
src/memory/: README.md  compactor.rs  entry.rs  episodic.rs  history.rs  indexer.rs  manager.rs  mod.rs  vector.rs
src/models/: README.md  hiftgan.rs  mod.rs  quantized.rs  reasoner.rs  t3.rs  t3_candle.rs
src/orchestrator/: README.md  a2a.rs  aggregation.rs  alignment.rs  bridge.rs  budget.rs  cli.rs  cn_frame.rs  commitment.rs  context.rs  curiosity.rs  debt.rs  drr.rs  event_bus.rs  evolution.rs  governance.rs  healing.rs  kind.rs  metabolism.rs  mht.rs  mod.rs  mvpk.rs  objective.rs  optimal_info.rs  pai.rs  planner.rs  profile.rs  provenance.rs  queue.rs  role_algebra.rs  router.rs  scale.rs  sensory.rs  service.rs  session.rs  sns.rs  speaker.rs  supervisor.rs  uap_grpc.rs  vault.rs  (+1 more)
src/safety/: README.md  assurance.rs  command.rs  content_filter.rs  hardening.rs  mod.rs  rate_limiter.rs
src/services/: listener.rs  memory.rs  mod.rs  responses.rs  speaker.rs
src/tools/: README.md  a2a.rs  agency_control.rs  artifact.rs  bitnet.rs  code_exec.rs  codebase.rs  dynamic.rs  knowledge_graph.rs  mcp.rs  memory_query.rs  mod.rs  models.rs  mutation.rs  sandbox.rs  science.rs  skills.rs  speaker_rs.rs  system.rs  vision.rs  visualization.rs  watchdog.rs  web_search.rs
src/utils/: README.md  hardening.rs  mod.rs  otel.rs  toon.rs  truncate.rs
tests/: architecture.rs  e2e_scenarios.rs  fpf_comprehensive_tests.rs  fpf_logic_tests.rs  fpf_tests.rs  load_curiosity.rs  load_test.rs  tga_e2e.rs
vpn/: wg0.conf
